# routes/web.php
@@ -11,6 +11,7 @@
  * )
  */
 
+use App\Http\Controllers\LoginController;
 use Illuminate\Support\Facades\Route;
 use OpenApi\Annotations as OA;
 
@@ -28,3 +29,11 @@ use OpenApi\Annotations as OA;
 Route::get('/', function () {
     return view('welcome');
 });
+
+Route::get('/login', function () {
+    return view('login');
+});
+
+Route::post('/login', [LoginController::class, 'login'])->name('login');
+Route::post('/logout', [LoginController::class, 'logout'])->name('logout');
+Route::post('/register', [LoginController::class, 'register'])->name('register');
